--- a/packages/saml/page_templates/saml_account_manager/locale/en/lang_screen_details.xml
+++ b/packages/saml/page_templates/saml_account_manager/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.1.1.1.2.1 2012/08/27 04:48:32 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.1.1.1.2.2 2012/08/28 01:24:55 ewang Exp $
 *
 */
 -->
@@ -90,7 +90,7 @@
 			</function_call>
 		</field>
 		<field>
-		    	<display_name>Service Provider Metadata Downoad URL</display_name>
+		    	<display_name>Service Provider Metadata Download URL</display_name>
 			<note></note>
 			<function_call>
 				<paint_function   name="paintMetadataUrl"   />
