--- a/packages/ecommerce/ecommerce_checkout/locale/en/lang_screen_actions.xml
+++ b/packages/ecommerce/ecommerce_checkout/locale/en/lang_screen_actions.xml
@@ -2,15 +2,15 @@
 /**
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 * | This MySource Matrix CMS file is Copyright (c) Squiz Pty Ltd       |
-* | ACN 084 670 600                                                    |
+* | ABN 084 670 600                                                    |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 * | IMPORTANT: Your use of this Software is subject to the terms of    |
 * | the Licence provided in the file licence.txt. If you cannot find   |
-* | this file please contact Squiz (www.squiz.net) so we may provide   |
+* | this file please contact Squiz (www.squiz.com.au) so we may provide|
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_actions.xml,v 1.1 2012/09/03 04:30:07 cupreti Exp $
+* $Id: lang_screen_actions.xml,v 1.2 2012/09/03 04:53:08 cupreti Exp $
 *
 */
 -->
