--- a/packages/web_services/rest/page_templates/page_rest_resource_oauth_session/locale/en/lang_screen_details.xml
+++ b/packages/web_services/rest/page_templates/page_rest_resource_oauth_session/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.4 2012/05/09 01:39:22 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.5 2012/09/05 02:59:45 ewang Exp $
 *
 */
 -->
@@ -34,6 +34,21 @@
 		<field attribute="allow_global_replace">
 			<display_name>Allow Keyword replacement</display_name>
 			<note>Enabling this option will allow Squiz Matrix to replace keywords found in the REST response body. This can be useful when the response is returned from another instance of Squiz Matrix. Disabling this option will ensure that the system does not replace any keywords (or content using a format similar to a keyword) in the response.</note>
+		</field>
+		<field attribute="redirect_authorise">
+			<display_name>Redirect To Authorise</display_name>
+			<note>Redirect user to the service provider's authorization page to authorise the request token, instead of nesting authorization form in Matrix page.</note>
+		</field>
+		<field attribute="store_token">
+			<display_name>Store Access Token</display_name>
+			<note>Turn this option on while token is available in session to permanently store the token. Turn this option off to forget the stored token.</note>
+		</field>
+		<field>
+			<display_name>Access Token</display_name>
+			<function_call>
+				<paint_function   name="paintAccessToken" />
+				<process_function name="processAccessToken" />
+			</function_call>
 		</field>
 	</section>
 </contents>
