--- a/packages/web_services/rest/page_templates/page_rest_resource_oauth_session/locale/en/lang_screen_details.xml
+++ b/packages/web_services/rest/page_templates/page_rest_resource_oauth_session/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.5 2012/09/05 02:59:45 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.6 2012/09/06 06:28:32 ewang Exp $
 *
 */
 -->
@@ -37,7 +37,7 @@
 		</field>
 		<field attribute="redirect_authorise">
 			<display_name>Redirect To Authorise</display_name>
-			<note>Redirect user to the service provider's authorization page to authorise the request token, instead of nesting authorization form in Matrix page.</note>
+			<note>Redirect user to the service provider's authorisation page to authorise the request token, instead of nesting authorisation form in Matrix page.</note>
 		</field>
 		<field attribute="store_token">
 			<display_name>Store Access Token</display_name>
