--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.419 2012/09/13 04:12:59 ewang Exp $
+* $Id: lang_strings.xml,v 1.420 2012/09/13 04:16:34 ewang Exp $
 *
 */
 
@@ -2928,4 +2928,5 @@ If you click &quot;OK&quot;, this context - and the attribute and metadata value
 
 	<string source="saml_authentication">SAML Authentication</string>
 	<string source="simplesamlphp_path">Simplesamlphp Path</string>
+	<string source="simplesamlphp_path_note">Install location of Simplesamlphp program</string>
 </strings>
