--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.23 2012/07/03 07:04:10 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.24 2012/09/18 04:31:41 cupreti Exp $
 *
 */
 -->
@@ -234,5 +234,8 @@
             <display_name>Set Metadata</display_name>
             <note />
         </field>
+		<field attribute="get_metadata_schema">
+			<display_name>Get Metadata Schema</display_name>
+		</field>		
     </section>
 </contents>
