Commit for #5891 Feature : New functions to let users get/set Context via API

--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.22.2.2 2012/09/21 06:44:10 cupreti Exp $
+* $Id: lang_screen_details.xml,v 1.22.2.3 2012/09/24 06:42:13 akarelia Exp $
 *
 */
 -->
@@ -236,6 +236,16 @@
         </field>
 		<field attribute="get_metadata_schema">
 			<display_name>Get Metadata Schema</display_name>
-		</field>				
+		</field>
+    </section>
+    <section name="Contexts" write_access="write:attributes">
+        <field attribute="get_context">
+            <display_name>Get Contexts</display_name>
+            <note />
+        </field>
+        <field attribute="set_context">
+            <display_name>Set Context</display_name>
+            <note />
+        </field>
     </section>
 </contents>
