--- a/packages/web_services/js_api/locale/en/lang_screen_details.xml
+++ b/packages/web_services/js_api/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.26 2012/10/03 01:40:11 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.27 2012/10/05 04:22:47 akarelia Exp $
 *
 */
 -->
@@ -249,7 +249,7 @@
         </field>
         <field attribute="sync_context">
             <display_name>Sync Context</display_name>
-            <note>Enabling this option will synchronize the context on backend and the JS API frontend. I.e. changing/restoring context context via JS API will be reflected on backend too and vice versa.</note>
+            <note>Enabling this option will synchronise the context on backend and the JS API frontend. I.e. changing/restoring context via JS API will be reflected on backend too and vice versa.</note>
         </field>
     </section>
 </contents>
