--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.421 2012/09/14 07:13:05 akarelia Exp $
+* $Id: lang_strings.xml,v 1.422 2012/10/11 02:57:02 cupreti Exp $
 *
 */
 
@@ -1060,6 +1060,8 @@
 	<string source="condition_in_user_group_false">The user is not in any of the following user groups</string>
 	<string source="condition_user_ip_true">The user's IP address matches the following pattern</string>
 	<string source="condition_user_ip_false">The user's IP address does not match the following pattern</string>
+	<string source="condition_user_ipv6_true">The user's IP address matches the following pattern</string>
+	<string source="condition_user_ipv6_false">The user's IP address does not match the following pattern</string>
 	<string source="condition_user_frequency_true">The following amount of time or activity has passed</string>
 	<string source="condition_user_frequency_false">The following amount of time or activity has passed</string>
 	<string source="condition_server_variable_true">The following server variable matches the specified pattern</string>
@@ -1080,6 +1082,15 @@
 	<string source="condition_user_ip_default_grant">If IP address is outside one of these ranges</string>
 	<string source="condition_user_ip_import_from_file">Import rules from CSV file</string>
 	<string source="condition_user_ip_import_from_file_explain">The file uploaded should be a CSV file without a header row. Each line should contain exactly six fields: the first four being the octets of the network IP address, the fifth being the subnet mask (in CIDR format, eg. "255.255.255.0" would be represented in the file by "24"), and the sixth being a one (1) for a Grant rule or zero (0) for a Deny rule. The default Grant/Deny setting is not affected by any upload and should be set separately.</string>
+
+	<!-- User IP Condition (IPv6) -->
+	<string source="network_ipv6_address">Network IP Address (IPv6)</string>
+	<string source="network_range_cidr">CIDR</string>
+	<string source="condition_user_ipv6_no_conditions_set">There are no conditions set</string>
+	<string source="condition_user_ipv6_default_grant">If IP address is outside one of these ranges</string>
+	<string source="condition_user_ipv6_import_from_file">Import rules from CSV file</string>
+	<string source="condition_user_ipv6_import_from_file_explain">The file uploaded should be a CSV file without a header row. Each line should contain exactly 3 fields: the first being the network IP address, the second being the subnet mask in the CIDR notation, and the third being a one (1) for a Grant rule or zero (0) for a Deny rule. The default Grant/Deny setting is not affected by any upload and should be set separately.</string>
+	<string source="condition_user_ipv6_note">NOTE: The network address entered will be automatically lowercased and converted to the "compressed" format. For example, all of these IPv6 addresses "00ff:0:0:0:0:0:0:0", "FF:0::0", "00ff::0000" will be converted to "ff::".</string>
 
 	<string source="server_variable">Server Variable</string>
 	<string source="pattern">Pattern</string>
